# OptimalTaskPlanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
e2e/: smoke.spec.js
packaging/: optimal-task-planner.spec  pyinstaller_entry.py
scripts/: extract_changelog.py  prepare_release.py
src/labplanner/: __init__.py  __main__.py  api.py  cli.py  config.py  export_xlsx.py  models.py  solver.py  storage.py
src/labplanner/static/: app.js  boot.js  core.js  i18n.js  icons.js  index.html  insights.js  resources.js  schedule.js  shell.js  style.css  tasks.js
src/labplanner/static/locales/: en.json  tr.json
src/optimal_task_planner/: __init__.py  __main__.py  api.py  calendar_utils.py  cli.py  config.py  models.py  storage.py
src/optimal_task_planner/static/: boot.js  core.js  i18n.js  icons.js  index.html  insights.js  schedule.js  shell.js  style.css  tasks.js
src/optimal_task_planner/static/locales/: en.json  tr.json
tests/: conftest.py  test_api.py  test_calendar.py  test_cli.py  test_config.py  test_locales.py  test_models.py  test_solver.py  test_storage.py
