[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "labplanner"
version = "0.1.0"
description = "Optimal lab equipment scheduling over a rolling horizon, powered by CP-SAT"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LabPlanner contributors" }]
keywords = ["scheduling", "cp-sat", "or-tools", "laboratory", "gantt", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ortools>=9.9",
    "pydantic>=2.6",
    "holidays>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Mavrikant/LabPlanner"
Issues = "https://github.com/Mavrikant/LabPlanner/issues"

[project.scripts]
labplanner = "labplanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
labplanner = ["static/*", "static/locales/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
